@@ -12,7 +12,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 @Service
@@ -40,7 +39,7 @@ public class AccountService extends AbstractCrudService<AccountDTO, Long, Accoun
     public List<AccountReadDTO> findAllByUserId(Long userId) {
         return repository.findByUserId(userId).stream()
                 .map(toReadEntityConverter)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
